@@ -7,14 +7,15 @@ import org.example.youth_be.artwork.repository.ArtworkRepository;
 import org.example.youth_be.artwork.service.request.ArtworkCreateRequest;
 import org.example.youth_be.artwork.service.request.ArtworkPaginationRequest;
 import org.example.youth_be.artwork.service.response.ArtworkDetailResponse;
+import org.example.youth_be.artwork.service.response.ArtworkImageResponse;
 import org.example.youth_be.artwork.service.response.ArtworkResponse;
 import org.example.youth_be.common.CursorPagingCommon;
 import org.example.youth_be.common.PageResponse;
 import org.example.youth_be.common.exceptions.YouthNotFoundException;
+import org.example.youth_be.common.jwt.TokenClaim;
 import org.example.youth_be.image.domain.ImageEntity;
 import org.example.youth_be.image.repository.ImageRepository;
 import org.example.youth_be.image.service.ImageService;
-import org.example.youth_be.image.service.response.UploadArtworkResponse;
 import org.example.youth_be.user.domain.UserEntity;
 import org.example.youth_be.user.repository.UserRepository;
 import org.springframework.data.domain.Slice;
@@ -34,7 +35,8 @@ public class ArtworkService {
     private final ImageService imageService;
 
     @Transactional
-    public Long createArtwork(ArtworkCreateRequest request) {
+    public Long createArtwork(TokenClaim tokenClaim, ArtworkCreateRequest request) {
+
         ArtworkEntity artworkEntity = ArtworkEntity.builder()
                 .title(request.getTitle())
                 .description(request.getDescription())
@@ -42,27 +44,18 @@ public class ArtworkService {
                 .viewCount(0L)
                 .likeCount(0L)
                 .commentCount(0L)
-                .userId(request.getUserId())
+                .userId(tokenClaim.getUserId())
+                .imageIdList(request.getImageIds())
                 .build();
         artworkRepository.save(artworkEntity);
 
-        // 이미지 업로드
-        UploadArtworkResponse uploadArtworkResponse = imageService.uploadImages(request.getImages());
-
-        // 이미지로 변환
-        List<ImageEntity> imageEntities = uploadArtworkResponse.getUrls().stream()
-                .map(url -> ImageEntity.builder()
-                        .imageUrl(url)
-                        .imageUploadName(url.substring(url.lastIndexOf('/') + 1))
-                        .artworkId(artworkEntity.getArtworkId())
-                        .build())
-                .collect(Collectors.toList());
-
-        // 이미지 저장
-        imageRepository.saveAll(imageEntities);
+        request.getImageIds().forEach(imageId -> {
+            ImageEntity imageEntity = imageRepository.findById(imageId).orElseThrow(() -> new YouthNotFoundException("해당 ID의 이미지를 찾을 수 없습니다.", null));
+            imageEntity.setArtworkId(artworkEntity.getArtworkId());
+        });
 
         // 썸네일 이미지 설정
-        artworkEntity.setThumbnailImageUrl(imageEntities.get(0).getImageUrl());
+        artworkEntity.setThumbnailImageUrl(imageRepository.findByArtworkId(artworkEntity.getArtworkId()).get(0).getImageUrl());
 
         return artworkEntity.getArtworkId();
     }
@@ -82,7 +75,11 @@ public class ArtworkService {
         ArtworkEntity artworkEntity = artworkRepository.findById(artworkId).orElseThrow(() -> new YouthNotFoundException("해당 ID의 작품를 찾을 수 없습니다.", null));
         UserEntity userEntity = userRepository.findById(artworkEntity.getUserId()).orElseThrow(() -> new YouthNotFoundException("해당 ID의 유저를 찾을 수 없습니다.", null));
         List<ImageEntity> images = imageRepository.findByArtworkId(artworkId);
-        List<String> imageUrls = images.stream().map(ImageEntity::getImageUrl).toList();
-        return ArtworkDetailResponse.of(userEntity, artworkEntity, imageUrls);
+
+        List<ArtworkImageResponse> artworkImageResponses = images.stream()
+                .map(image -> ArtworkImageResponse.of(image.getImageId(), image.getImageUrl()))
+                .collect(Collectors.toList());
+
+        return ArtworkDetailResponse.of(userEntity, artworkEntity, artworkImageResponses);
     }
 }
